--- a/BreathingCoach/Podfile
+++ b/BreathingCoach/Podfile
@@ -2,13 +2,14 @@
 source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '11.0'
 use_frameworks!
+source 'https://github.com/azawawi/SwiftyZeroMQ.git'
 
 target 'BreathingCoach' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for BreathingCoach
-  pod 'Starscream', '~> 4.0.6'
+  pod 'SwiftyZeroMQ', '~> 1.0'
 
   target 'BreathingCoachTests' do
     inherit! :search_paths
